# debugprobe-rp2350-geek

./: CMakeLists.txt  config.cmake  rp2350-geek.md
include/: DAP_config.h  board_pico_config.h
src/: cdc_uart.c  main.c
src/rp2350-geek-lcd/: CMakeLists.txt
src/rp2350-geek-lcd/examples/: ImageData.c
src/rp2350-geek-lcd/gui/: gui.c  gui.h
src/rp2350-geek-lcd/lib/: CMakeLists.txt
src/rp2350-geek-lcd/lib/Config/: CMakeLists.txt  DEV_Config.c
src/rp2350-geek-lcd/lib/Fonts/: CMakeLists.txt
src/rp2350-geek-lcd/lib/GUI/: CMakeLists.txt
src/rp2350-geek-lcd/lib/LCD/: CMakeLists.txt
